test/errors/packages_error/zs/wrong_package_name_error.zs
package wrong_package_name_error;

import bad_package_name.*;
